Add and Change: minio storage added and changed for it - handlers, main files and etc
